--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
        <artifactId>pagehelper</artifactId>
        <version>5.0.0</version>
     </dependency>
+    <!-- json-->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
 
   </dependencies>
 
