--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.8.8</version>
     </dependency>
+      <!-- JSR303数据校验支持 hibernate-validator -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>5.4.1.Final</version>
+      </dependency>
 
   </dependencies>
 
