基于ssm框架的crud

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/ssmcrud
+database.url=jdbc:mysql://localhost:3306/ssmcrud?useUnicode=true&characterEncoding=UTF-8&useSSL=true
 database.username=root
-database.password=123
+database.password=root
